@@ -13,7 +13,7 @@
     <artifactId>AdminService</artifactId>
 
     <properties>
-        <javafx.version>21.0.2</javafx.version>
+        <javafx.version>23.0.2</javafx.version>
         <jackson.version>2.17.2</jackson.version>
     </properties>
 
@@ -67,6 +67,11 @@
             <artifactId>SecurityCommon</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>DomainCommon</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -74,6 +79,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
